parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OPENBRACE
    CHRLIT
    UNDERSCORE
    CLOSEBRACE
    COMMA
    IS
    MULTI_COMMENT
    break
    SINGLE_COMMENT
    BOOLEAN
    NOT
    QUOTATION

Grammar

Rule 0     S' -> main_program
Rule 1     main_program -> start OPENCURLY statement CLOSECURLY end
Rule 2     statement -> empty
Rule 3     empty -> <empty>
Rule 4     statement -> statement_list
Rule 5     statement_list -> statement
Rule 6     statement_list -> statement statement_list
Rule 7     statement -> VAR ASSIGN expression TILDE
Rule 8     statement -> VAR ASSIGN INTLIT TILDE
Rule 9     statement -> expression TILDE
Rule 10    statement -> def VAR OPENPAR CLOSEPAR OPENCURLY statement CLOSECURLY end_def
Rule 11    parameter -> INTLIT
Rule 12    parameter -> STRLIT
Rule 13    statement -> class VAR OPENCURLY statement CLOSECURLY
Rule 14    statement -> VAR ASSIGN OPENPAR expression CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
Rule 15    statement -> VAR ASSIGN OPENPAR STRLIT CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
Rule 16    statement -> VAR ASSIGN expression TILDE return OPENPAR VAR CLOSEPAR TILDE
Rule 17    statement -> VAR ASSIGN STRLIT TILDE return OPENPAR VAR CLOSEPAR TILDE
Rule 18    statement -> print OPENPAR expression CLOSEPAR TILDE
Rule 19    statement -> print OPENPAR STRLIT CLOSEPAR TILDE
Rule 20    statement -> VAR ASSIGN expression TILDE print OPENPAR VAR CLOSEPAR TILDE
Rule 21    statement -> VAR ASSIGN STRLIT TILDE print OPENPAR VAR CLOSEPAR TILDE
Rule 22    statement -> if_statement
Rule 23    if_statement -> if OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY
Rule 24    if_statement -> if OPENPAR boolean CLOSEPAR print OPENPAR STRLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR STRLIT CLOSEPAR TILDE CLOSECURLY
Rule 25    if_statement -> if OPENPAR boolean CLOSEPAR print OPENPAR INTLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR INTLIT CLOSEPAR TILDE CLOSECURLY
Rule 26    if_statement -> if OPENPAR boolean CLOSEPAR print OPENPAR expression CLOSEPAR TILDE else OPENCURLY print OPENPAR expression CLOSEPAR TILDE CLOSECURLY
Rule 27    statement -> while_stmt
Rule 28    while_stmt -> VAR ASSIGN INTLIT TILDE while OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY if_statement
Rule 29    expression -> term
Rule 30    expression -> boolean
Rule 31    boolean -> expression GT term
Rule 32    boolean -> expression GEQ term
Rule 33    boolean -> expression LT term
Rule 34    boolean -> expression LEQ term
Rule 35    boolean -> expression EQ term
Rule 36    boolean -> expression NEQ term
Rule 37    boolean -> expression AND term
Rule 38    boolean -> expression OR term
Rule 39    boolean -> expression is term
Rule 40    expression -> expression PLUS term
Rule 41    expression -> expression MINUS term
Rule 42    term -> term MUL factor
Rule 43    term -> term DIV factor
Rule 44    term -> term MOD factor
Rule 45    term -> STRLIT
Rule 46    term -> factor
Rule 47    factor -> INTLIT
Rule 48    factor -> FLTLIT
Rule 49    factor -> DBLLIT
Rule 50    factor -> OPENPAR expression CLOSEPAR

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 7 8 14 15 16 17 20 21 28
BOOLEAN              : 
CHRLIT               : 
CLOSEBRACE           : 
CLOSECURLY           : 1 10 13 23 24 25 26 28
CLOSEPAR             : 10 14 14 15 15 16 17 18 19 20 21 23 24 24 24 25 25 25 26 26 26 28 50
COMMA                : 
DBLLIT               : 49
DIV                  : 43
EQ                   : 35
FLTLIT               : 48
GEQ                  : 32
GT                   : 31
INTLIT               : 8 11 25 25 28 47
IS                   : 
LEQ                  : 34
LT                   : 33
MINUS                : 41
MOD                  : 44
MUL                  : 42
MULTI_COMMENT        : 
NEQ                  : 36
NOT                  : 
OPENBRACE            : 
OPENCURLY            : 1 10 13 23 24 25 26 28
OPENPAR              : 10 14 14 15 15 16 17 18 19 20 21 23 24 24 24 25 25 25 26 26 26 28 50
OR                   : 38
PLUS                 : 40
QUOTATION            : 
SINGLE_COMMENT       : 
STRLIT               : 12 15 17 19 21 24 24 45
TILDE                : 7 8 9 14 14 15 15 16 16 17 17 18 19 20 20 21 21 24 24 25 25 26 26 28
UNDERSCORE           : 
VAR                  : 7 8 10 13 14 14 15 15 16 16 17 17 20 20 21 21 28
break                : 
class                : 13
def                  : 10
else                 : 24 25 26
end                  : 1
end_def              : 10
error                : 
if                   : 23 24 25 26
is                   : 39
print                : 18 19 20 21 24 24 25 25 26 26
return               : 16 17
scan                 : 14 15
start                : 1
while                : 28

Nonterminals, with rules where they appear

boolean              : 23 24 25 26 28 30
empty                : 2
expression           : 7 9 14 16 18 20 26 26 31 32 33 34 35 36 37 38 39 40 41 50
factor               : 42 43 44 46
if_statement         : 22 28
main_program         : 0
parameter            : 
statement            : 1 5 6 10 13 23 28
statement_list       : 4 6
term                 : 29 31 32 33 34 35 36 37 38 39 40 41 42 43 44
while_stmt           : 27

Parsing method: LALR

state 0

    (0) S' -> . main_program
    (1) main_program -> . start OPENCURLY statement CLOSECURLY end

    start           shift and go to state 1

    main_program                   shift and go to state 2

state 1

    (1) main_program -> start . OPENCURLY statement CLOSECURLY end

    OPENCURLY       shift and go to state 3


state 2

    (0) S' -> main_program .



state 3

    (1) main_program -> start OPENCURLY . statement CLOSECURLY end
    (2) statement -> . empty
    (4) statement -> . statement_list
    (7) statement -> . VAR ASSIGN expression TILDE
    (8) statement -> . VAR ASSIGN INTLIT TILDE
    (9) statement -> . expression TILDE
    (10) statement -> . def VAR OPENPAR CLOSEPAR OPENCURLY statement CLOSECURLY end_def
    (13) statement -> . class VAR OPENCURLY statement CLOSECURLY
    (14) statement -> . VAR ASSIGN OPENPAR expression CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (15) statement -> . VAR ASSIGN OPENPAR STRLIT CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (16) statement -> . VAR ASSIGN expression TILDE return OPENPAR VAR CLOSEPAR TILDE
    (17) statement -> . VAR ASSIGN STRLIT TILDE return OPENPAR VAR CLOSEPAR TILDE
    (18) statement -> . print OPENPAR expression CLOSEPAR TILDE
    (19) statement -> . print OPENPAR STRLIT CLOSEPAR TILDE
    (20) statement -> . VAR ASSIGN expression TILDE print OPENPAR VAR CLOSEPAR TILDE
    (21) statement -> . VAR ASSIGN STRLIT TILDE print OPENPAR VAR CLOSEPAR TILDE
    (22) statement -> . if_statement
    (27) statement -> . while_stmt
    (3) empty -> .
    (5) statement_list -> . statement
    (6) statement_list -> . statement statement_list
    (29) expression -> . term
    (30) expression -> . boolean
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (23) if_statement -> . if OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY
    (24) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR STRLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR STRLIT CLOSEPAR TILDE CLOSECURLY
    (25) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR INTLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR INTLIT CLOSEPAR TILDE CLOSECURLY
    (26) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR expression CLOSEPAR TILDE else OPENCURLY print OPENPAR expression CLOSEPAR TILDE CLOSECURLY
    (28) while_stmt -> . VAR ASSIGN INTLIT TILDE while OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY if_statement
    (42) term -> . term MUL factor
    (43) term -> . term DIV factor
    (44) term -> . term MOD factor
    (45) term -> . STRLIT
    (46) term -> . factor
    (31) boolean -> . expression GT term
    (32) boolean -> . expression GEQ term
    (33) boolean -> . expression LT term
    (34) boolean -> . expression LEQ term
    (35) boolean -> . expression EQ term
    (36) boolean -> . expression NEQ term
    (37) boolean -> . expression AND term
    (38) boolean -> . expression OR term
    (39) boolean -> . expression is term
    (47) factor -> . INTLIT
    (48) factor -> . FLTLIT
    (49) factor -> . DBLLIT
    (50) factor -> . OPENPAR expression CLOSEPAR

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for def resolved as shift
  ! shift/reduce conflict for class resolved as shift
  ! shift/reduce conflict for print resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for FLTLIT resolved as shift
  ! shift/reduce conflict for DBLLIT resolved as shift
  ! shift/reduce conflict for OPENPAR resolved as shift
    VAR             shift and go to state 15
    def             shift and go to state 22
    class           shift and go to state 16
    print           shift and go to state 10
    CLOSECURLY      reduce using rule 3 (empty -> .)
    if              shift and go to state 8
    STRLIT          shift and go to state 14
    INTLIT          shift and go to state 7
    FLTLIT          shift and go to state 18
    DBLLIT          shift and go to state 4
    OPENPAR         shift and go to state 5

  ! VAR             [ reduce using rule 3 (empty -> .) ]
  ! def             [ reduce using rule 3 (empty -> .) ]
  ! class           [ reduce using rule 3 (empty -> .) ]
  ! print           [ reduce using rule 3 (empty -> .) ]
  ! if              [ reduce using rule 3 (empty -> .) ]
  ! STRLIT          [ reduce using rule 3 (empty -> .) ]
  ! INTLIT          [ reduce using rule 3 (empty -> .) ]
  ! FLTLIT          [ reduce using rule 3 (empty -> .) ]
  ! DBLLIT          [ reduce using rule 3 (empty -> .) ]
  ! OPENPAR         [ reduce using rule 3 (empty -> .) ]

    term                           shift and go to state 17
    while_stmt                     shift and go to state 19
    boolean                        shift and go to state 6
    statement                      shift and go to state 9
    factor                         shift and go to state 13
    statement_list                 shift and go to state 20
    if_statement                   shift and go to state 11
    expression                     shift and go to state 21
    empty                          shift and go to state 12

state 4

    (49) factor -> DBLLIT .

    MUL             reduce using rule 49 (factor -> DBLLIT .)
    DIV             reduce using rule 49 (factor -> DBLLIT .)
    MOD             reduce using rule 49 (factor -> DBLLIT .)
    TILDE           reduce using rule 49 (factor -> DBLLIT .)
    PLUS            reduce using rule 49 (factor -> DBLLIT .)
    MINUS           reduce using rule 49 (factor -> DBLLIT .)
    GT              reduce using rule 49 (factor -> DBLLIT .)
    GEQ             reduce using rule 49 (factor -> DBLLIT .)
    LT              reduce using rule 49 (factor -> DBLLIT .)
    LEQ             reduce using rule 49 (factor -> DBLLIT .)
    EQ              reduce using rule 49 (factor -> DBLLIT .)
    NEQ             reduce using rule 49 (factor -> DBLLIT .)
    AND             reduce using rule 49 (factor -> DBLLIT .)
    OR              reduce using rule 49 (factor -> DBLLIT .)
    is              reduce using rule 49 (factor -> DBLLIT .)
    CLOSEPAR        reduce using rule 49 (factor -> DBLLIT .)


state 5

    (50) factor -> OPENPAR . expression CLOSEPAR
    (29) expression -> . term
    (30) expression -> . boolean
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (42) term -> . term MUL factor
    (43) term -> . term DIV factor
    (44) term -> . term MOD factor
    (45) term -> . STRLIT
    (46) term -> . factor
    (31) boolean -> . expression GT term
    (32) boolean -> . expression GEQ term
    (33) boolean -> . expression LT term
    (34) boolean -> . expression LEQ term
    (35) boolean -> . expression EQ term
    (36) boolean -> . expression NEQ term
    (37) boolean -> . expression AND term
    (38) boolean -> . expression OR term
    (39) boolean -> . expression is term
    (47) factor -> . INTLIT
    (48) factor -> . FLTLIT
    (49) factor -> . DBLLIT
    (50) factor -> . OPENPAR expression CLOSEPAR

    STRLIT          shift and go to state 14
    INTLIT          shift and go to state 7
    FLTLIT          shift and go to state 18
    DBLLIT          shift and go to state 4
    OPENPAR         shift and go to state 5

    term                           shift and go to state 17
    boolean                        shift and go to state 6
    expression                     shift and go to state 23
    factor                         shift and go to state 13

state 6

    (30) expression -> boolean .

    TILDE           reduce using rule 30 (expression -> boolean .)
    PLUS            reduce using rule 30 (expression -> boolean .)
    MINUS           reduce using rule 30 (expression -> boolean .)
    GT              reduce using rule 30 (expression -> boolean .)
    GEQ             reduce using rule 30 (expression -> boolean .)
    LT              reduce using rule 30 (expression -> boolean .)
    LEQ             reduce using rule 30 (expression -> boolean .)
    EQ              reduce using rule 30 (expression -> boolean .)
    NEQ             reduce using rule 30 (expression -> boolean .)
    AND             reduce using rule 30 (expression -> boolean .)
    OR              reduce using rule 30 (expression -> boolean .)
    is              reduce using rule 30 (expression -> boolean .)
    CLOSEPAR        reduce using rule 30 (expression -> boolean .)


state 7

    (47) factor -> INTLIT .

    MUL             reduce using rule 47 (factor -> INTLIT .)
    DIV             reduce using rule 47 (factor -> INTLIT .)
    MOD             reduce using rule 47 (factor -> INTLIT .)
    TILDE           reduce using rule 47 (factor -> INTLIT .)
    PLUS            reduce using rule 47 (factor -> INTLIT .)
    MINUS           reduce using rule 47 (factor -> INTLIT .)
    GT              reduce using rule 47 (factor -> INTLIT .)
    GEQ             reduce using rule 47 (factor -> INTLIT .)
    LT              reduce using rule 47 (factor -> INTLIT .)
    LEQ             reduce using rule 47 (factor -> INTLIT .)
    EQ              reduce using rule 47 (factor -> INTLIT .)
    NEQ             reduce using rule 47 (factor -> INTLIT .)
    AND             reduce using rule 47 (factor -> INTLIT .)
    OR              reduce using rule 47 (factor -> INTLIT .)
    is              reduce using rule 47 (factor -> INTLIT .)
    CLOSEPAR        reduce using rule 47 (factor -> INTLIT .)


state 8

    (23) if_statement -> if . OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY
    (24) if_statement -> if . OPENPAR boolean CLOSEPAR print OPENPAR STRLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR STRLIT CLOSEPAR TILDE CLOSECURLY
    (25) if_statement -> if . OPENPAR boolean CLOSEPAR print OPENPAR INTLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR INTLIT CLOSEPAR TILDE CLOSECURLY
    (26) if_statement -> if . OPENPAR boolean CLOSEPAR print OPENPAR expression CLOSEPAR TILDE else OPENCURLY print OPENPAR expression CLOSEPAR TILDE CLOSECURLY

    OPENPAR         shift and go to state 24


state 9

    (1) main_program -> start OPENCURLY statement . CLOSECURLY end
    (5) statement_list -> statement .
    (6) statement_list -> statement . statement_list
    (5) statement_list -> . statement
    (6) statement_list -> . statement statement_list
    (2) statement -> . empty
    (4) statement -> . statement_list
    (7) statement -> . VAR ASSIGN expression TILDE
    (8) statement -> . VAR ASSIGN INTLIT TILDE
    (9) statement -> . expression TILDE
    (10) statement -> . def VAR OPENPAR CLOSEPAR OPENCURLY statement CLOSECURLY end_def
    (13) statement -> . class VAR OPENCURLY statement CLOSECURLY
    (14) statement -> . VAR ASSIGN OPENPAR expression CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (15) statement -> . VAR ASSIGN OPENPAR STRLIT CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (16) statement -> . VAR ASSIGN expression TILDE return OPENPAR VAR CLOSEPAR TILDE
    (17) statement -> . VAR ASSIGN STRLIT TILDE return OPENPAR VAR CLOSEPAR TILDE
    (18) statement -> . print OPENPAR expression CLOSEPAR TILDE
    (19) statement -> . print OPENPAR STRLIT CLOSEPAR TILDE
    (20) statement -> . VAR ASSIGN expression TILDE print OPENPAR VAR CLOSEPAR TILDE
    (21) statement -> . VAR ASSIGN STRLIT TILDE print OPENPAR VAR CLOSEPAR TILDE
    (22) statement -> . if_statement
    (27) statement -> . while_stmt
    (3) empty -> .
    (29) expression -> . term
    (30) expression -> . boolean
    (40) expression -> . expression PLUS term
    (41) expression -> . expression MINUS term
    (23) if_statement -> . if OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY
    (24) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR STRLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR STRLIT CLOSEPAR TILDE CLOSECURLY
    (25) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR INTLIT CLOSEPAR TILDE else OPENCURLY print OPENPAR INTLIT CLOSEPAR TILDE CLOSECURLY
    (26) if_statement -> . if OPENPAR boolean CLOSEPAR print OPENPAR expression CLOSEPAR TILDE else OPENCURLY print OPENPAR expression CLOSEPAR TILDE CLOSECURLY
    (28) while_stmt -> . VAR ASSIGN INTLIT TILDE while OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY if_statement
    (42) term -> . term MUL factor
    (43) term -> . term DIV factor
    (44) term -> . term MOD factor
    (45) term -> . STRLIT
    (46) term -> . factor
    (31) boolean -> . expression GT term
    (32) boolean -> . expression GEQ term
    (33) boolean -> . expression LT term
    (34) boolean -> . expression LEQ term
    (35) boolean -> . expression EQ term
    (36) boolean -> . expression NEQ term
    (37) boolean -> . expression AND term
    (38) boolean -> . expression OR term
    (39) boolean -> . expression is term
    (47) factor -> . INTLIT
    (48) factor -> . FLTLIT
    (49) factor -> . DBLLIT
    (50) factor -> . OPENPAR expression CLOSEPAR

  ! shift/reduce conflict for CLOSECURLY resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for def resolved as shift
  ! shift/reduce conflict for class resolved as shift
  ! shift/reduce conflict for print resolved as shift
  ! shift/reduce conflict for CLOSECURLY resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for def resolved as shift
  ! shift/reduce conflict for class resolved as shift
  ! shift/reduce conflict for print resolved as shift
  ! reduce/reduce conflict for if resolved using rule 3 (empty -> .)
  ! reduce/reduce conflict for STRLIT resolved using rule 3 (empty -> .)
  ! reduce/reduce conflict for INTLIT resolved using rule 3 (empty -> .)
  ! reduce/reduce conflict for FLTLIT resolved using rule 3 (empty -> .)
  ! reduce/reduce conflict for DBLLIT resolved using rule 3 (empty -> .)
  ! reduce/reduce conflict for OPENPAR resolved using rule 3 (empty -> .)
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for FLTLIT resolved as shift
  ! shift/reduce conflict for DBLLIT resolved as shift
  ! shift/reduce conflict for OPENPAR resolved as shift
    CLOSECURLY      shift and go to state 25
    VAR             shift and go to state 15
    def             shift and go to state 22
    class           shift and go to state 16
    print           shift and go to state 10
    if              shift and go to state 8
    STRLIT          shift and go to state 14
    INTLIT          shift and go to state 7
    FLTLIT          shift and go to state 18
    DBLLIT          shift and go to state 4
    OPENPAR         shift and go to state 5

  ! CLOSECURLY      [ reduce using rule 5 (statement_list -> statement .) ]
  ! VAR             [ reduce using rule 5 (statement_list -> statement .) ]
  ! def             [ reduce using rule 5 (statement_list -> statement .) ]
  ! class           [ reduce using rule 5 (statement_list -> statement .) ]
  ! print           [ reduce using rule 5 (statement_list -> statement .) ]
  ! if              [ reduce using rule 5 (statement_list -> statement .) ]
  ! STRLIT          [ reduce using rule 5 (statement_list -> statement .) ]
  ! INTLIT          [ reduce using rule 5 (statement_list -> statement .) ]
  ! FLTLIT          [ reduce using rule 5 (statement_list -> statement .) ]
  ! DBLLIT          [ reduce using rule 5 (statement_list -> statement .) ]
  ! OPENPAR         [ reduce using rule 5 (statement_list -> statement .) ]
  ! CLOSECURLY      [ reduce using rule 3 (empty -> .) ]
  ! VAR             [ reduce using rule 3 (empty -> .) ]
  ! def             [ reduce using rule 3 (empty -> .) ]
  ! class           [ reduce using rule 3 (empty -> .) ]
  ! print           [ reduce using rule 3 (empty -> .) ]
  ! if              [ reduce using rule 3 (empty -> .) ]
  ! STRLIT          [ reduce using rule 3 (empty -> .) ]
  ! INTLIT          [ reduce using rule 3 (empty -> .) ]
  ! FLTLIT          [ reduce using rule 3 (empty -> .) ]
  ! DBLLIT          [ reduce using rule 3 (empty -> .) ]
  ! OPENPAR         [ reduce using rule 3 (empty -> .) ]

    term                           shift and go to state 17
    while_stmt                     shift and go to state 19
    boolean                        shift and go to state 6
    statement                      shift and go to state 26
    factor                         shift and go to state 13
    statement_list                 shift and go to state 27
    if_statement                   shift and go to state 11
    expression                     shift and go to state 21
    empty                          shift and go to state 12

state 10

    (18) statement -> print . OPENPAR expression CLOSEPAR TILDE
    (19) statement -> print . OPENPAR STRLIT CLOSEPAR TILDE

    OPENPAR         shift and go to state 28


state 11

    (22) statement -> if_statement .

    CLOSECURLY      reduce using rule 22 (statement -> if_statement .)
    VAR             reduce using rule 22 (statement -> if_statement .)
    def             reduce using rule 22 (statement -> if_statement .)
    class           reduce using rule 22 (statement -> if_statement .)
    print           reduce using rule 22 (statement -> if_statement .)
    if              reduce using rule 22 (statement -> if_statement .)
    STRLIT          reduce using rule 22 (statement -> if_statement .)
    INTLIT          reduce using rule 22 (statement -> if_statement .)
    FLTLIT          reduce using rule 22 (statement -> if_statement .)
    DBLLIT          reduce using rule 22 (statement -> if_statement .)
    OPENPAR         reduce using rule 22 (statement -> if_statement .)


state 12

    (2) statement -> empty .

    CLOSECURLY      reduce using rule 2 (statement -> empty .)
    VAR             reduce using rule 2 (statement -> empty .)
    def             reduce using rule 2 (statement -> empty .)
    class           reduce using rule 2 (statement -> empty .)
    print           reduce using rule 2 (statement -> empty .)
    if              reduce using rule 2 (statement -> empty .)
    STRLIT          reduce using rule 2 (statement -> empty .)
    INTLIT          reduce using rule 2 (statement -> empty .)
    FLTLIT          reduce using rule 2 (statement -> empty .)
    DBLLIT          reduce using rule 2 (statement -> empty .)
    OPENPAR         reduce using rule 2 (statement -> empty .)


state 13

    (46) term -> factor .

    MUL             reduce using rule 46 (term -> factor .)
    DIV             reduce using rule 46 (term -> factor .)
    MOD             reduce using rule 46 (term -> factor .)
    TILDE           reduce using rule 46 (term -> factor .)
    PLUS            reduce using rule 46 (term -> factor .)
    MINUS           reduce using rule 46 (term -> factor .)
    GT              reduce using rule 46 (term -> factor .)
    GEQ             reduce using rule 46 (term -> factor .)
    LT              reduce using rule 46 (term -> factor .)
    LEQ             reduce using rule 46 (term -> factor .)
    EQ              reduce using rule 46 (term -> factor .)
    NEQ             reduce using rule 46 (term -> factor .)
    AND             reduce using rule 46 (term -> factor .)
    OR              reduce using rule 46 (term -> factor .)
    is              reduce using rule 46 (term -> factor .)
    CLOSEPAR        reduce using rule 46 (term -> factor .)


state 14

    (45) term -> STRLIT .

    MUL             reduce using rule 45 (term -> STRLIT .)
    DIV             reduce using rule 45 (term -> STRLIT .)
    MOD             reduce using rule 45 (term -> STRLIT .)
    TILDE           reduce using rule 45 (term -> STRLIT .)
    PLUS            reduce using rule 45 (term -> STRLIT .)
    MINUS           reduce using rule 45 (term -> STRLIT .)
    GT              reduce using rule 45 (term -> STRLIT .)
    GEQ             reduce using rule 45 (term -> STRLIT .)
    LT              reduce using rule 45 (term -> STRLIT .)
    LEQ             reduce using rule 45 (term -> STRLIT .)
    EQ              reduce using rule 45 (term -> STRLIT .)
    NEQ             reduce using rule 45 (term -> STRLIT .)
    AND             reduce using rule 45 (term -> STRLIT .)
    OR              reduce using rule 45 (term -> STRLIT .)
    is              reduce using rule 45 (term -> STRLIT .)
    CLOSEPAR        reduce using rule 45 (term -> STRLIT .)


state 15

    (7) statement -> VAR . ASSIGN expression TILDE
    (8) statement -> VAR . ASSIGN INTLIT TILDE
    (14) statement -> VAR . ASSIGN OPENPAR expression CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (15) statement -> VAR . ASSIGN OPENPAR STRLIT CLOSEPAR TILDE scan OPENPAR VAR CLOSEPAR TILDE
    (16) statement -> VAR . ASSIGN expression TILDE return OPENPAR VAR CLOSEPAR TILDE
    (17) statement -> VAR . ASSIGN STRLIT TILDE return OPENPAR VAR CLOSEPAR TILDE
    (20) statement -> VAR . ASSIGN expression TILDE print OPENPAR VAR CLOSEPAR TILDE
    (21) statement -> VAR . ASSIGN STRLIT TILDE print OPENPAR VAR CLOSEPAR TILDE
    (28) while_stmt -> VAR . ASSIGN INTLIT TILDE while OPENPAR boolean CLOSEPAR OPENCURLY statement CLOSECURLY if_statement

    ASSIGN          shift and go to state 29


state 16

    (13) statement -> class . VAR OPENCURLY statement CLOSECURLY

    VAR             shift and go to state 30


state 17

    (29) expression -> term .
    (42) term -> term . MUL factor
    (43) term -> term . DIV factor
    (44) term -> term . MOD factor

    TILDE           reduce using rule 29 (expression -> term .)
    PLUS            reduce using rule 29 (expression -> term .)
    MINUS           reduce using rule 29 (expression -> term .)
    GT              reduce using rule 29 (expression -> term .)
    GEQ             reduce using rule 29 (expression -> term .)
    LT              reduce using rule 29 (expression -> term .)
    LEQ             reduce using rule 29 (expression -> term .)
    EQ              reduce using rule 29 (expression -> term .)
    NEQ             reduce using rule 29 (expression -> term .)
    AND             reduce using rule 29 (expression -> term .)
    OR              reduce using rule 29 (expression -> term .)
    is              reduce using rule 29 (expression -> term .)
    CLOSEPAR        reduce using rule 29 (expression -> term .)
    MUL             shift and go to state 31
    DIV             shift and go to state 33
    MOD             shift and go to state 32


state 18

    (48) factor -> FLTLIT .

    MUL             reduce using rule 48 (factor -> FLTLIT .)
    DIV             reduce using rule 48 (factor -> FLTLIT .)
    MOD             reduce using rule 48 (factor -> FLTLIT .)
    TILDE           reduce using rule 48 (factor -> FLTLIT .)
    PLUS            reduce using rule 48 (factor -> FLTLIT .)
    MINUS           reduce using rule 48 (factor -> FLTLIT .)
    GT              reduce using rule 48 (factor -> FLTLIT .)
    GEQ             reduce using rule 48 (factor -> FLTLIT .)
    LT              reduce using rule 48 (factor -> FLTLIT .)
    LEQ             reduce using rule 48 (factor -> FLTLIT .)
    EQ              reduce using rule 48 (factor -> FLTLIT .)
    NEQ             reduce using rule 48 (factor -> FLTLIT .)
    AND             reduce using rule 48 (factor -> FLTLIT .)
    OR              reduce using rule 48 (factor -> FLTLIT .)
    is              reduce using rule 48 (factor -> FLTLIT .)
    CLOSEPAR        reduce using rule 48 (factor -> FLTLIT .)


state 19

    (27) statement -> while_stmt .

    CLOSECURLY      reduce using rule 27 (statement -> while_stmt .)
    VAR             reduce using rule 27 (statement -> while_stmt .)
    def             reduce using rule 27 (statement -> while_stmt .)
    class           reduce using rule 27 (statement -> while_stmt .)
    print           reduce using rule 27 (statement -> while_stmt .)
    if              reduce using rule 27 (statement -> while_stmt .)
    STRLIT          reduce using rule 27 (statement -> while_stmt .)
    INTLIT          reduce using rule 27 (statement -> while_stmt .)
    FLTLIT          reduce using rule 27 (statement -> while_stmt .)
    DBLLIT          reduce using rule 27 (statement -> while_stmt .)
    OPENPAR         reduce using rule 27 (statement -> while_stmt .)


state 20

    (4) statement -> statement_list .

    CLOSECURLY      reduce using rule 4 (statement -> statement_list .)
    VAR             reduce using rule 4 (statement -> statement_list .)
    def             reduce using rule 4 (statement -> statement_list .)
    class           reduce using rule 4 (statement -> statement_list .)
    print           reduce using rule 4 (statement -> statement_list .)
    if              reduce using rule 4 (statement -> statement_list .)
    STRLIT          reduce using rule 4 (statement -> statement_list .)
    INTLIT          reduce using rule 4 (statement -> statement_list .)
    FLTLIT          reduce using rule 4 (statement -> statement_list .)
    DBLLIT          reduce using rule 4 (statement -> statement_list .)
    OPENPAR         reduce using rule 4 (statement -> statement_list .)


state 21

    (9) statement -> expression . TILDE
    (40) expression -> expression . PLUS term
    (41) expression -> expression . MINUS term
    (31) boolean -> expression . GT term
    (32) boolean -> expression . GEQ term
    (33) boolean -> expression . LT term
    (34) boolean -> expression . LEQ term
    (35) boolean -> expression . EQ term
    (36) boolean -> expression . NEQ term
    (37) boolean -> expression . AND term
    (38) boolean -> expression . OR term
    (39) boolean -> expression . is term

    TILDE           shift and go to state 43
    PLUS            shift and go to state 42
    MINUS           shift and go to state 44
    GT              shift and go to state 35
    GEQ             shift and go to state 38
    LT              shift and go to state 41
    LEQ             shift and go to state 40
    EQ              shift and go to state 36
    NEQ             shift and go to state 45
    AND             shift and go to state 34
    OR              shift and go to state 39
    is              shift and go to state 37


state 22

    (10) statement -> def . VAR OPENPAR CLOSEPAR OPENCURLY statement CLOSECURLY end_def

    VAR             shift and go to state 46


state 23

    (50) factor -> OPENPAR expression . CLOSEPAR
    (40) expression -> expression . PLUS term
    (41) expression -> expression . MINUS term
    (31) boolean -> expression . GT term
    (32) boolean -> expression . GEQ term
    (33) boolean -> expression . LT term
    (34) boolean -> expression . LEQ term
    (35) boolean -> expression . EQ term
    (36) boolean -> expression . NEQ term
    (37) boolean -> expression . AND term
    (38) boolean -> expression . OR term
    (39) boolean -> expression . is term

    CLOSEPAR        shift and go to state 47
    PLUS            shift and go to state 42
    MINUS           shift and go to state 44
    GT              shift and go to state 35
    GEQ             shift and go to state 38
    LT              shift and go to state 41
    LEQ             shift and go to state 40
    EQ              shift and go to state 36
    NEQ             shift and go to state 45
    AND             shift and go to state 34
    OR              shift and go to state 39
    is              shift and go to state 37


state 24
